# MeRecall

./: .gitignore  Applications.cabal  CHANGELOG.md  default.nix  journalh.cabal  journalh.nix  merecall.cabal  merecall.nix
app/: Main.hs  Relations.hs  Share.hs  Types.hs
app/Cli/: Commands.hs  Parse.hs  Rendering.hs  Types.hs  Util.hs  Wizards.hs
project_management/: ideas.md  ideas.txt  todo.md  todo.txt
src/JournalH/: Relations.hs  Share.hs  Types.hs
src/JournalH/ClockInOut/: Relations.hs  Types.hs
src/MeRecall/: Relations.hs  Share.hs  Types.hs
