cabal-version:   3.0
name:            Applications
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Applications
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                      Parse
                      Util
                      Share
                      Cli.Types
                      Cli.Parse
                      Cli.Commands
    build-depends:    base ^>=4.17.2.1
                    , optparse-applicative >= 0.18.1.0
                    , process
                    , temporary
                    , text-ansi
                    , directory >= 1.3.8.5
                    , filepath >= 1.5.2.0
                    , time >= 1.14
    hs-source-dirs:   app
    default-extensions: NamedFieldPuns
    default-language: Haskell2010
