cabal-version:   3.0
name:            merecall
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
                      MeRecall.Types
                      MeRecall.Share
                      MeRecall.Relations

    hs-source-dirs:   src

    build-depends:    base ^>=4.17.2.1
                    , time >= 1.14

    default-extensions: NamedFieldPuns
                      , ScopedTypeVariables
                      , LambdaCase
    default-language: Haskell2010

executable mrcl
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cli.Types
                      Cli.Parse
                      Cli.Commands
                      Cli.Rendering
                      Cli.Util
                      Cli.Wizards
                      Share
    build-depends:    base ^>=4.17.2.1
                    , merecall
                    , time >= 1.14
                    , boxes
                    , wizards
                    , split
                    , terminal-size
                    , optparse-applicative >= 0.18.1.0
                    , process
                    , temporary
                    , text-ansi
                    , directory >= 1.3.8.5
                    , filepath >= 1.5.2.0
    hs-source-dirs:   app
    default-extensions: NamedFieldPuns
                      , ScopedTypeVariables
                      , LambdaCase

    default-language: Haskell2010
